team section updated

--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -28,8 +28,7 @@
   <link rel="stylesheet" href="assets/css/cse.css">
   <link rel="stylesheet" href="assets/css/Social-Icons.css">
   <link rel="stylesheet" href="assets/css/css/all.min.css">
-
-  <!-- Template Main CSS File -->
+  <script src="assets/js/anime.min.js"></script>
   <link href="assets/css/style.css" rel="stylesheet">
 
 
@@ -88,44 +87,44 @@
             </div>
             <div class="col-lg-5  col-md-6 mt-4 mt-md-0">
               <!-- <img src="assets/img/brandicons.png" class="img-fluid" alt=""> -->
-              <div class="contain">
-                <div class="item item1"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item2"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item3"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item4"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item5"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item6"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item7"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item8 anim" onclick="profile()"><img src="assets/img/brandicons/profile.png" alt="Blank Icon" width="60" height="60"></div></a>
-                <div class="item item9 anim"><img src="assets/img/brandicons/software.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item10 anim"><img src="assets/img/brandicons/key.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item11 anim"><img src="assets/img/brandicons/shield.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item12"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item13"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item14 anim"><img src="assets/img/brandicons/Configurable.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item15 anim"><img src="assets/img/brandicons/cctv.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item16 anim"><img src="assets/img/brandicons/database.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item17 anim"><img src="assets/img/brandicons/police.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item18"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item19"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item20 anim"><img src="assets/img/brandicons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item21 anim"><img src="assets/img/brandicons/environmental.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item22 anim"><img src="assets/img/brandicons/faceScan.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item23 anim"><img src="assets/img/brandicons/analysis.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item24"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item25"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item26 anim"><img src="assets/img/brandicons/network.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item27 anim"><img src="assets/img/brandicons/accuracy.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item28 anim"><img src="assets/img/brandicons/log.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item29 anim"><img src="assets/img/brandicons/message.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item30"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item31"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item32"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item33"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item34"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item35"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-                <div class="item item36"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
-            </div>
+                <div class="contain">
+                  <div class="item item1"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item2"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item3"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item4"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item5"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item6"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item7"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item8 anim" onclick="profile()"><img src="assets/img/brandicons/profile.png" alt="Blank Icon" width="60" height="60"></div></a>
+                  <div class="item item9 anim"><img src="assets/img/brandicons/software.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item10 anim"><img src="assets/img/brandicons/key.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item11 anim"><img src="assets/img/brandicons/shield.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item12"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item13"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item14 anim"><img src="assets/img/brandicons/Configurable.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item15 anim"><img src="assets/img/brandicons/cctv.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item16 anim"><img src="assets/img/brandicons/database.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item17 anim"><img src="assets/img/brandicons/police.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item18"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item19"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item20 anim"><img src="assets/img/brandicons/rfid.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item21 anim"><img src="assets/img/brandicons/environmental.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item22 anim"><img src="assets/img/brandicons/faceScan.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item23 anim"><img src="assets/img/brandicons/analysis.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item24"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item25"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item26 anim"><img src="assets/img/brandicons/network.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item27 anim"><img src="assets/img/brandicons/accuracy.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item28 anim"><img src="assets/img/brandicons/log.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item29 anim"><img src="assets/img/brandicons/message.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item30"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item31"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item32"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item33"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item34"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item35"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+                  <div class="item item36"><img src="assets/img/brandicons/rect.png" alt="Blank Icon" width="60" height="60"></div>
+              </div>
             </div>
           </div>
 
@@ -1197,47 +1196,47 @@
 
     <div class="footer-top" id="footer-top">
       <div class="container">
-        <div class="row">
+        <div class="row text-center">
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-6 col-sm-4 footer-links">
             <h4>Solutions</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Synic</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">SIDLog</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">EventLog</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">QueueLog</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">TYMDOT</a></li>
+              <li> <a href="#">Synic</a></li>
+              <li> <a href="#">SIDLog</a></li>
+              <li> <a href="#">EventLog</a></li>
+              <li> <a href="#">QueueLog</a></li>
+              <li> <a href="#">TYMDOT</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-6 col-sm-4 footer-links">
             <h4>Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li> <a href="#">Home</a></li>
+              <li> <a href="#">About us</a></li>
+              <li> <a href="#">Services</a></li>
+              <li> <a href="#">Terms of service</a></li>
+              <li> <a href="#">Privacy policy</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-6 col-sm-4 footer-links">
             <h4>Company</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About Us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Jobs</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Isight</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li> <a href="#">About Us</a></li>
+              <li> <a href="#">Jobs</a></li>
+              <li> <a href="#">Insight</a></li>
+              <li> <a href="#">Marketing</a></li>
+              <li> <a href="#">Graphic Design</a></li>
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-3 col-md-6 col-sm-4 footer-links">
             <h4>Help</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Support</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Contact</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">+233(0) 55 755 3290</a></li>
+              <li> <a href="#">Support</a></li>
+              <li> <a href="#">Contact</a></li>
+              <li> <a href="#">+233(0) 55 755 3290</a></li>
             </ul>
           </div>
 
@@ -1335,6 +1334,8 @@ btn.addEventListener('click', function () {
     x.style.display = "none";
   }
       }
+
+  
   </script>
 
 </body>
