--- a/BiziLand/index.html
+++ b/BiziLand/index.html
@@ -75,7 +75,7 @@
       <div class="col-lg-12" style="margin-bottom:5%">
         <div class="container">
           <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-lg-7 col-md-6" data-aos="zoom-out" data-aos-delay="100">
+            <div class="col-lg-7 col-md-6">
               <div id="welcome">
                 <h1 style="font-size:35px;font-weight:500">Welcome to</h1>
                 <h1 class="pt-3"style="color:#009FE3">CodLogic<br>Software Engineering</h1>
@@ -135,7 +135,7 @@
   <main id="main">
       <!-- ======= Clients Section ======= -->
       <section id="clients" class="brands section-subsidiaries-bg">
-        <div class="container" data-aos="zoom-in">
+        <div class="container" >
   
           <div class="row">
   
@@ -170,7 +170,7 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about" id="footer-top">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="section-title">
           <h2>About</h2>
@@ -179,10 +179,10 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-6" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-6">
             <img src="assets/img/about3.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center">
             <h3 style="font-size:22px">We are a group of visionary thinkers who strive for the absolute perfection in all our endeavors.</h3>
             <ul>
               <li>
@@ -220,12 +220,12 @@
 
     <!-- ======= Featured Services Section ======= -->
     <section id="featured-services" class="featured-services">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
 
         <div class="row d-flex justify-content-center">
               
             <div class="col-md-6 col-lg-3 d-flex justify-conte mb-5 mb-lg-0">
-              <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <div class="icon-box">
                 <div class="icon" style="text-align:center"><i class="bx bx-smile"></i></div>
                 <h4 class="title" style="font-size:36px;text-align:center;font-weight:600"><a href="">50+</a></h4>
                 <p class="description" style="text-align:center;font-size:13px;font-weight:400">Happy Customers</p>
@@ -233,7 +233,7 @@
             </div>
             
             <div class="col-md-6 col-lg-3 d-flex justify-conte mb-5 mb-lg-0">
-              <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+              <div class="icon-box">
                 <div class="icon" style="text-align:center"><i class="bx bx-fingerprint"></i></div>
                 <h4 class="title" style="font-size:36px;text-align:center;font-weight:600"><a href="">12+</a></h4>
                 <p class="description" style="text-align:center;font-size:13px;font-weight:400">Years experience in Access Control Systems</p>
@@ -241,7 +241,7 @@
             </div>
 
             <div class="col-md-6 col-lg-3 d-flex justify-conte mb-5 mb-lg-0">
-              <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+              <div class="icon-box">
                 <div class="icon" style="text-align:center"><i class="bx bx-check-shield"></i></div>
                 <h4 class="title" style="font-size:36px;text-align:center;font-weight:600"><a href="">10+</a></h4>
                 <p class="description" style="text-align:center;font-size:13px;font-weight:400">Trusted partners worldwide</p>
@@ -249,7 +249,7 @@
             </div>
 
             <div class="col-md-6 col-lg-3 d-flex justify-conte mb-5 mb-lg-0">
-              <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
+              <div class="icon-box">
                 <div class="icon" style="text-align:center"><i class="icofont-file-code"></i></div>
                 <h4 class="title" style="font-size:36px;text-align:center;font-weight:600"><a href="">20+</a></h4>
                 <p class="description" style="text-align:center;font-size:13px;font-weight:400">Highly skilled R&D engineers</p>
@@ -262,7 +262,7 @@
 
     <!-- ======= Skills Section =======
     <section id="skills" class="skills">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="row skills-content">
 
@@ -323,7 +323,7 @@
 
     <!-- ======= Counts Section =======
     <section id="counts" class="counts">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="row">
 
@@ -366,7 +366,7 @@
 
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients" id="footer-top">
-      <div class="container" data-aos="zoom-in">
+      <div class="container" >
         <p style="font-size:20px;font-weight:700">
           <span style="color:#009fe3">Corporations</span> We Have Worked For
         </p>
@@ -406,7 +406,7 @@
 
     <!-- ======= Solutions Section ======= -->
     <section id="solutions" class="services">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="section-title">
           <h2>Solutions</h2>
@@ -415,7 +415,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div>-->
                  <!--Card image-->
@@ -433,7 +433,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div>
                -->
@@ -452,7 +452,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div>-->
                  <!--Card image-->
@@ -467,7 +467,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div>
                -->
@@ -486,7 +486,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div>
                -->
@@ -505,7 +505,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div>
                -->
@@ -531,14 +531,14 @@
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
         <div class="section-title">
           <h2>Services</h2>
           <h3>Check our <span>Services</span></h3>
           <p>qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at</p>
         </div>
         <div class="row">
-            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" 0">
               <div class="card serve">
                 <div class="card-body mt-4">
                   <div class="row">
@@ -555,7 +555,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
+            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" 0">
               <div class="card serve">
                 <div class="card-body mt-4">
                   <div class="row">
@@ -572,7 +572,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
+            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" 0">
               <div class="card serve">
                 <div class="card-body mt-4">
                   <div class="row">
@@ -589,7 +589,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" 0">
               <div class="card serve">
                 <div class="card-body mt-4">
                   <div class="row">
@@ -606,7 +606,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" data-aos="zoom-in" data-aos-delay="200">
+            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" 0">
               <div class="card serve">
                 <div class="card-body mt-4">
                   <div class="row">
@@ -623,7 +623,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
+            <div class="col-lg-6 col-md-6 d-flex  mt-4 align-items-stretch" 0">
               <div class="card serve">
                 <div class="card-body mt-4">
                   <div class="row">
@@ -648,7 +648,7 @@
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
-      <div class="container" data-aos="zoom-in">
+      <div class="container" >
 
         <div class="owl-carousel testimonials-carousel">
 
@@ -719,7 +719,7 @@
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="section-title">
           <h2>Team</h2>
@@ -729,7 +729,7 @@
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" 0">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
@@ -741,13 +741,13 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Evans Kofi Martin</h4>
+                <h4>Ryan Gosling</h4>
                 <span>Managing Director / CTO</span>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" 0">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
@@ -759,13 +759,13 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Jim Garnish</h4>
+                <h4>Scarlette Johanson</h4>
                 <span>Snr. Business Strategist</span>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" 0">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
@@ -777,13 +777,13 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Michael Kankam</h4>
+                <h4>Fiifi Bosman</h4>
                 <span>Lead Programmer</span>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch" 0">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
@@ -795,7 +795,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Papa Arkhust</h4>
+                <h4>Denis Baah Botweh</h4>
                 <span>Snr. Systems Imp. Specialist</span>
               </div>
             </div>
@@ -809,7 +809,7 @@
 
        <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="section-title">
           <h2>Gallery</h2>
@@ -817,7 +817,7 @@
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
+        <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -828,7 +828,7 @@
           </div>
         </div>
 
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+        <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/gallery/corporate1.jpg" class="img-fluid" alt="">
@@ -929,7 +929,7 @@
 
     <!-- ======= Pricing Section =======
     <section id="pricing" class="pricing">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="section-title">
           <h2>Pricing</h2>
@@ -939,7 +939,7 @@
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3 col-md-6" 0">
             <div class="box">
               <h3>Free</h3>
               <h4><sup>$</sup>0<span> / month</span></h4>
@@ -956,7 +956,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-3 col-md-6 mt-4 mt-md-0" 0">
             <div class="box featured">
               <h3>Business</h3>
               <h4><sup>$</sup>19<span> / month</span></h4>
@@ -973,7 +973,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" 0">
             <div class="box">
               <h3>Developer</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
@@ -990,7 +990,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-3 col-md-6 mt-4 mt-lg-0" 0">
             <div class="box">
               <span class="advanced">Advanced</span>
               <h3>Ultimate</h3>
@@ -1015,7 +1015,7 @@
 
     <!-- ======= Frequently Asked Questions Section =======
     <section id="faq" class="faq section-bg">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="section-title">
           <h2>F.A.Q</h2>
@@ -1023,7 +1023,7 @@
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
-        <ul class="faq-list" data-aos="fade-up" data-aos-delay="100">
+        <ul class="faq-list" 0">
 
           <li>
             <a data-toggle="collapse" class="" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="icofont-simple-up"></i></a>
@@ -1086,7 +1086,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
 
         <div class="section-title">
           <h2>Contact</h2>
@@ -1094,7 +1094,7 @@
           <p>Ut possimus qui ut temporibus culpa velit eveniet modi omnis est adipisci expedita at voluptas atque vitae autem.</p>
         </div>
 
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
+        <div class="row">
           <div class="col-lg-6">
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
@@ -1121,7 +1121,7 @@
 
         </div>
 
-        <div class="row" data-aos="fade-up" data-aos-delay="100">
+        <div class="row">
 
           <div class="col-lg-6 ">
             <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3970.686948406849!2d-0.21916178555220078!3d5.613165134633417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9b36d83b6bcd%3A0xa984347ca594af2a!2sCodLogics%20Software%20Engineering!5e0!3m2!1sen!2sgh!4v1602499937107!5m2!1sen!2sgh" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
